--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@
 /* This style sheet is taken from  https://www.w3schools.com/howto/howto_js_tabs.asp> */
 /* This style sheet has been modified from Caroline Barriere's initial file. */
 
+.header h1 {
+  position: relative;
+  color: rgb(255, 255, 255);
+  background-color: rgb(34, 139, 34);
+}
+
 /* Style the tab */
 .tab {
   overflow: hidden;
