--- a/index.css
+++ b/index.css
@@ -13,6 +13,12 @@ body {
   background-color: rgb(34, 139, 34);
 }
 
+.subheader h1 {
+  position: relative;
+  color: rgb(255, 255, 255);
+  background-color: rgb(255, 0, 0);
+}
+
 /* Style the tab */
 .tab {
   overflow: hidden;
