--- a/index.css
+++ b/index.css
@@ -13,10 +13,11 @@ body {
   background-color: rgb(34, 139, 34);
 }
 
-.subheader h1 {
+.subheader h2 {
   position: relative;
   color: rgb(255, 255, 255);
   background-color: rgb(255, 0, 0);
+  font-size: 20px;
 }
 
 /* Style the tab */
