--- a/index.css
+++ b/index.css
@@ -20,6 +20,11 @@ body {
   font-size: 16px;
 }
 
+.welcome h3 {
+  position: relative;
+  color: rgb(34, 139, 34);
+}
+
 /* Style the tab */
 .tab {
   overflow: hidden;
